# OckBench

./: .gitignore  CLAUDE.md  EXPERIMENT_LOG.md  INSTRUCTIONS_BENCHMARK.md  INSTRUCTIONS_HAO_KANG.md  PROJECT.md  README.md  main.py  pyproject.toml  requirements.txt
configs/: local.yaml  openai.yaml
data/: OckBench_Coding_Selected.jsonl  OckBench_Math_Selected.jsonl  OckBench_Science_Selected.jsonl  OckBench_coding.jsonl  OckBench_science.jsonl
scripts/: run_claude_benchmark.sh  run_deepseek_v4.sh  run_haokang.sh  run_openai_benchmark.sh  run_opensource_benchmark.sh  run_proxy_v2.sh  run_proxy_v2_ctx.sh
src/core/: __init__.py  config.py  runner.py  schemas.py
src/evaluators/: __init__.py  code_eval.py  math_eval.py  science_eval.py
src/loaders/: __init__.py  base.py
src/models/: __init__.py  anthropic_api.py  base.py  gemini_api.py  openai_api.py  openai_responses_api.py
src/utils/: logger.py  parser.py  prompt_formatter.py  token_counter.py
